--- a/app/views/9-3-2/eas_month_view.html
+++ b/app/views/9-3-2/eas_month_view.html
@@ -42,17 +42,17 @@
             <th class="govuk-table__header" scope="row">16-18 Apprenticeship Frameworks</th>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1618AF-ELS" name="1618AF-ELS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1618AF-ELS" name="1618AF-ELS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1618AF-AC" name="1618AF-AC" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1618AF-AC" name="1618AF-AC" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1618AF-LS" name="1618AF-LS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1618AF-LS" name="1618AF-LS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--disabled">&nbsp;</td>
@@ -61,18 +61,18 @@
             <th class="govuk-table__header" scope="row">16-18 Trailblazer Frameworks</th>
             <td class="govuk-table__cell govuk-table__cell--numeric"> 
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1618TF-ELS" name="1618TF-ELS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1618TF-ELS" name="1618TF-ELS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--disabled">&nbsp;</td>
             <td class="govuk-table__cell govuk-table__cell--numeric"> 
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1618TF-LS" name="1618TF-LS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1618TF-LS" name="1618TF-LS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric"> 
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1618TF-O" name="1618TF-O" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1618TF-O" name="1618TF-O" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
           </tr>
@@ -80,18 +80,18 @@
             <th class="govuk-table__header" scope="row">19-23 Apprenticeship Frameworks</th>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1923AF-ELS" name="1923AF-ELS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1923AF-ELS" name="1923AF-ELS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1923AF-AC" name="1923AF-AC" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1923AF-AC" name="1923AF-AC" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--disabled">&nbsp;</td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1923AF-O" name="1923AF-O" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1923AF-O" name="1923AF-O" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
           </tr>
@@ -99,22 +99,22 @@
             <th class="govuk-table__header" scope="row">19-23 Trailblazer Apprenticeships</th>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1923TA-ELS" name="1923TA-ELS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1923TA-ELS" name="1923TA-ELS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1923TA-AC" name="1923TA-AC" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1923TA-AC" name="1923TA-AC" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1923TA-LS" name="1923TA-LS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1923TA-LS" name="1923TA-LS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1923TA-O" name="1923TA-O" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1923TA-O" name="1923TA-O" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
           </tr>
@@ -123,17 +123,17 @@
             <td class="govuk-table__cell govuk-table__cell--disabled">&nbsp;</td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="24AF-AC" name="24AF-AC" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="24AF-AC" name="24AF-AC" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="24AF-LS" name="24AF-LS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="24AF-LS" name="24AF-LS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="24AF-O" name="24AF-O" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="24AF-O" name="24AF-O" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
           </tr>
@@ -141,22 +141,22 @@
             <th class="govuk-table__header" scope="row">24+ Trailblazer Apprenticeships</th>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="24TA-ELS" name="24TA-ELS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="24TA-ELS" name="24TA-ELS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="24TA-AC" name="24TA-AC" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="24TA-AC" name="24TA-AC" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="24TA-LS" name="24TA-LS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="24TA-LS" name="24TA-LS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="24TA-O" name="24TA-O" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="24TA-O" name="24TA-O" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
           </tr>
@@ -164,18 +164,18 @@
             <th class="govuk-table__header" scope="row">16-18 Non-levy contracted Apprenticeships -<br>Non-procured delivery</th>
             <td class="govuk-table__cell govuk-table__cell--numeric"> 
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1618NLCA-ELS" name="1618NLCA-ELS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1618NLCA-ELS" name="1618NLCA-ELS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--disabled">&nbsp;</td>
             <td class="govuk-table__cell govuk-table__cell--numeric"> 
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1618NLCA-LS" name="1618NLCA-LS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1618NLCA-LS" name="1618NLCA-LS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric"> 
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="1618NLCA-O" name="1618NLCA-O" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="1618NLCA-O" name="1618NLCA-O" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
           </tr>
@@ -183,22 +183,22 @@
             <th class="govuk-table__header" scope="row">Adult Non-levy contracted Apprenticeships</th>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="ANLCA-ELS" name="ANLCA-ELS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="ANLCA-ELS" name="ANLCA-ELS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="ANLCA-AC" name="ANLCA-AC" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="ANLCA-AC" name="ANLCA-AC" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="ANLCA-LS" name="ANLCA-LS" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="ANLCA-LS" name="ANLCA-LS" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
             <td class="govuk-table__cell govuk-table__cell--numeric">
               <div class="govuk-form-group">
-                 <input class="govuk-input govuk-!-width-two-thirds" id="ANLCA-O" name="ANLCA-O" value = "0" type="text">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="ANLCA-O" name="ANLCA-O" value = "£0" type="text" onclick="this.value='';" onblur="if (this.value=='') {this.value='0'}; this.value='£'+this.value;">
               </div>
             </td>
           </tr>
