--- a/app/views/9-3-2/manage_your_eas.html
+++ b/app/views/9-3-2/manage_your_eas.html
@@ -37,7 +37,7 @@
           <tr class="govuk-table__row">
             <th class="govuk-table__header" scope="row">August</th>
             <td class="govuk-table__cell govuk-table__cell--numeric">£0</td>
-            <td class="govuk-table__cell"><a href="eas_month_view?easmonthselected=August">Change</a></td>
+            <td class="govuk-table__cell"><a href="eas_month_view?easmonthselected=August">Add claim</a></td>
           </tr>
           <tr class="govuk-table__row">
             <th class="govuk-table__header" scope="row">September</th>
