fixed branching issue

--- a/app/views/KitKat-9-4-0/eas_data_submitted.html
+++ b/app/views/KitKat-9-4-0/eas_data_submitted.html
@@ -15,14 +15,14 @@
     <div class="govuk-grid-column-two-thirds">
 		<div class="govuk-panel govuk-panel--confirmation">
           <h2 class="govuk-panel__title">
-            R12 supplementary data file submitted
+            R02 Earnings adjustment statement file submitted
           </h2>
           <div class="govuk-panel__body">
 			  Reference: 123456789
            
           </div>
         </div>		
-<p>File: <span class="govuk-!-font-weight-bold">SUPPDATA-12345678-EAS-8976-20180806-151209.CSV</span></p>
+<p>File: <span class="govuk-!-font-weight-bold">EAS-12345678-8976-20180806-151209.CSV</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Sam Smith</span></p>
 <p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p> 
 
@@ -42,7 +42,7 @@
       </div>
     </details>
 
-		<p><a href="./returns.html">View reports page</a></p>
+		<p><a href="./reports.html">View reports page</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
