--- a/app/views/KitKat-9-4-0/reports.html
+++ b/app/views/KitKat-9-4-0/reports.html
@@ -44,7 +44,7 @@
       <td class="govuk-table__cell ">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</td>
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">20 August</th>
+      <th class="govuk-table__header" scope="row">20 August 2018</th>
       <td class="govuk-table__cell ">ILR-12345678-1819-20180806-05092018-01.XML</td>
     </tr>
   </tbody>
