--- a/app/assets/sass/components/_table.scss
+++ b/app/assets/sass/components/_table.scss
@@ -12,6 +12,10 @@
    	vertical-align: top;
    	width: 20%;
    	padding-left: 10px;
+
+   	&:last-child {
+    	padding-right: 20px;
+	}
 }
 
 .govuk-table--noinputborders {
