--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -302,6 +302,7 @@ progress::-moz-progress-bar { background: white; }
     font-size: 14px;
     line-height: 1.1428571429;
     padding: 1em 0 0 0;
+    margin-bottom: 0;
     /*border-bottom: 1px solid #bfc1c3;*/
 }
 
