--- a/app/views/KitKat-9-4-0/what_data_do_you_want_to_submit.html
+++ b/app/views/KitKat-9-4-0/what_data_do_you_want_to_submit.html
@@ -8,10 +8,9 @@
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        
-        		<div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
   <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
     R02 collection has been extended
   </h2>
@@ -19,7 +18,13 @@
 	  <p>Due to the outage experienced the submission window has been extended.</p>
   </div>
 </div>
-		
+  </div>
+</div>	
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        
+        	
 		<form action="choose_file_to_upload" method="get" class="form">
 			<div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
