Email template, contents, index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-xl">
         Data Collections Transformation        
       </h1>
@@ -27,6 +27,22 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+       <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Kit Kat 9.4.0</th>
+        <td class="govuk-table__cell ">
+          <ul class="govuk-list govuk-list--bullet">
+            <p>We added:</p>
+            <li>email template</li>
+            <li>step by step concept (includes link to downloads and services)</li>
+            <li>reports only journey options</li>
+            <li>communication banner</li>
+            <li>new reports page</li>
+            <li>EAS as a file upload</li>
+          </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="KitKat-9-4-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="KitKat-9-4-0/start.html">Start now</a></td>
+    </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.2</th>
         <td class="govuk-table__cell ">
