--- a/app/views/KitKat-9-4-0/contents.html
+++ b/app/views/KitKat-9-4-0/contents.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
 		
       	<h1 class="govuk-heading-xl">
-        	Contents <span class="govuk-caption-xl">Version 9.3.2</span>       
+        	Contents <span class="govuk-caption-xl">Version Kit Kat 9.4.0</span>       
       	</h1>
       	<p>
         	Please do not enter any personal information. This prototype is not secure.
@@ -29,7 +29,7 @@
 			<li><a href="theres_a_problem.html">There's a problem</a></li>
 			<li><a href="no_problems_found.html">No problems found</a></li>
 			<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>
-			<li><a href="return-period.html">Return period</a></li>
+			<li><a href="reports.html">Reports</a></li>
 		</ul>
 
 		<h2 class="govuk-heading-l">EAS (Happy Path)</h2>
@@ -38,10 +38,9 @@
 			<li><a href="start.html">Start page</a></li>
 		  	<li><a href="idams.html">IDAMS</a></li>
 		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
-			<li><a href="manage_your_eas.html">Manage your earning adjustment statement</a></li>
-			<li><a href="choose_programme.html">Choose programme</a></li>
-			<li><a href="add_claim_details.html">Add claim details</a></li>
-			<li><a href="manage_your_eas_added.html">Claim added</a></li>
+			<li><a href="eas_choose_file_to_upload.html">Manage your earning adjustment statement</a></li>
+			<li><a href="eas_data_submitted.html">Choose programme</a></li>			
+			<li><a href="reports.html">Reports</a></li>
 		</ul>
 
 		<h2 class="govuk-heading-l">ESF User Journey (Happy Path)</h2>
@@ -53,7 +52,7 @@
 			<li><a href="esf_choose_file_to_upload.html">Choose file to upload</a></li>
 			<li><a href="your_files_uploading.html">Your file's uploading (wip)</a></li>
 			<li><a href="esf_data_submitted.html">ESF data submitted</a></li>
-			<li><a href="return-period.html">Return period</a></li>
+			<li><a href="reports.html">Reports</a></li>
 		</ul>
 
 		<h2 class="govuk-heading-l">Error states and fails</h2>
@@ -63,8 +62,7 @@
 			<li><a href="choose_file_to_upload_error_1.html">Choose file to upload (error state 1)</a></li>
 			<li><a href="choose_file_to_upload_error_2.html">Choose file to upload (error state 2)</a></li>
 			<li><a href="upload_file_failed.html">File upload failed</a></li>
-			<li><a href="submit_data_error_1.html">Submit data (error state 1)</a></li>
-			<!--<li><a href="submit_data_error_2.html">Submit data (error state 2)</a></li>-->
+			<li><a href="submit_data_error_1.html">Submit data (error state 1)</a></li>			
 			
 		</ul> 
 		
@@ -72,6 +70,18 @@
 		
 		<ul class="govuk-list govuk-list--number">	
 			<li><a href="problem_with_the_service.html">Sorry, there’s a problem with the service</a></li>
+			
+		</ul>
+        <h2 class="govuk-heading-l">Emails</h2>
+		
+		<ul class="govuk-list govuk-list--number">	
+			<li><a href="./emails/ilr-email-for-provider.html">ILR email for provider</a></li>
+			
+		</ul>
+        <h2 class="govuk-heading-l">Guidance</h2>
+		
+		<ul class="govuk-list govuk-list--number">	
+			<li><a href="step-by-step.html">Submit learner data: step-by-step</a></li>
 			
 		</ul>
     </div>
