fixing uploading page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,6 +38,7 @@
             <li>communication banner</li>
             <li>new reports page</li>
             <li>EAS as a file upload</li>
+            <li>Updated file loading page</li>
           </ul>
         </td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/contents.html">Contents</a></td>
