--- a/app/views/KitKat-9-4-0/reports.html
+++ b/app/views/KitKat-9-4-0/reports.html
@@ -11,8 +11,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">		
 		<h1 class="govuk-heading-xl">Reports <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
-        <p><a href="#">Download all your reports</a> (Zip, 1.3MB) for this return period.
+        <p><a href="#">Download all your reports</a> (Zip, 1.3MB) for this return period. You can also <a href="previous-reports">view your previous reports</a>.
 </p>
+     
 				<details class="govuk-details">
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
@@ -32,20 +33,24 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">Date</th>
       <th class="govuk-table__header" scope="col">File name</th>
+      <th class="govuk-table__header" scope="col">Uploaded by</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">5 September 2018</th>
       <td class="govuk-table__cell ">ILR-12345678-1819-20180806-05092018-02.XML</td>
+        <td class="govuk-table__cell ">Sam Smith</td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">4 September 2018</th>
       <td class="govuk-table__cell ">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</td>
+        <td class="govuk-table__cell ">Marcy Jones</td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">20 August 2018</th>
       <td class="govuk-table__cell ">ILR-12345678-1819-20180806-05092018-01.XML</td>
+        <td class="govuk-table__cell ">Sam Smith</td>
     </tr>
   </tbody>
 </table>
