--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,7 +38,12 @@
             <li>communication banner</li>
             <li>new reports page</li>
             <li>EAS as a file upload</li>
-            <li>Updated file loading page</li>
+            <li>updated file loading page</li>
+            <li>exit survey</li>
+            <li>updated sidebar</li>
+            <li>downloads history</li>
+            <li>useful tools page</li>
+            <li>account info and sign out</li>
           </ul>
         </td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/contents.html">Contents</a></td>
