--- a/app/views/KitKat-9-4-0/contents.html
+++ b/app/views/KitKat-9-4-0/contents.html
@@ -30,6 +30,7 @@
 			<li><a href="no_problems_found.html">No problems found</a></li>
 			<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>
 			<li><a href="reports.html">Reports</a></li>
+            <li><a href="previous-reports.html">Previous reports</a></li>
 		</ul>
 
 		<h2 class="govuk-heading-l">EAS (Happy Path)</h2>
@@ -57,7 +58,7 @@
 
 		<h2 class="govuk-heading-l">Error states and fails</h2>
 		
-		<ul class="govuk-list govuk-list--number">	
+		<ul class="govuk-list govuk-list--bullet">	
 			<li><a href="what_data_do_you_want_to_submit_error.html">What data do you want to submit? (error state)</a></li>
 			<li><a href="choose_file_to_upload_error_1.html">Choose file to upload (error state 1)</a></li>
 			<li><a href="choose_file_to_upload_error_2.html">Choose file to upload (error state 2)</a></li>
@@ -68,20 +69,27 @@
 		
 		<h2 class="govuk-heading-l">Service pages</h2>
 		
-		<ul class="govuk-list govuk-list--number">	
+		<ul class="govuk-list govuk-list--bullet">	
 			<li><a href="problem_with_the_service.html">Sorry, there’s a problem with the service</a></li>
 			
 		</ul>
         <h2 class="govuk-heading-l">Emails</h2>
 		
-		<ul class="govuk-list govuk-list--number">	
+		<ul class="govuk-list govuk-list--bullet">	
 			<li><a href="./emails/ilr-email-for-provider.html">ILR email for provider</a></li>
 			
 		</ul>
         <h2 class="govuk-heading-l">Guidance</h2>
 		
-		<ul class="govuk-list govuk-list--number">	
+		<ul class="govuk-list govuk-list--bullet">	
 			<li><a href="step-by-step.html">Submit learner data: step-by-step</a></li>
+            <li><a href="useful_tools.html">Useful tools</a></li>
+			
+		</ul>
+        <h2 class="govuk-heading-l">Feedback</h2>
+		
+		<ul class="govuk-list govuk-list--bullet">	
+			<li><a href="exit-survey.html">Exit survey</a></li>
 			
 		</ul>
     </div>
