--- a/app/views/KitKat-9-4-0/includes/account_info.html
+++ b/app/views/KitKat-9-4-0/includes/account_info.html
@@ -1,7 +1,8 @@
 <div class="govuk-body account-info">
             <div>
                 <span class="your-name" id="bannerUserName">Sam Smith
-                UKPRN:123456</span> <a class="account-link" href="./reports" id="reports-link">Reports</a>
+                UKPRN:123456</span> <a class="account-link" href="./exit-survey" id="signout-link">Sign out</a>
             </div>
+   
     
         </div>
