--- a/app/views/KitKat-9-4-0/includes/sidebar_help_related_ESFA.html
+++ b/app/views/KitKat-9-4-0/includes/sidebar_help_related_ESFA.html
@@ -8,7 +8,7 @@
 	Friday, 8:30am to 4:00pm<br/>
 	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
     <h2 class="govuk-heading-m" id="subsection-title">
-           Submissions
+           Useful links
           </h2>
           <nav role="navigation" aria-labelledby="subsection-title">
             <ul class="govuk-list govuk-!-font-size-16">
@@ -21,7 +21,12 @@
                 <a href="./step-by-step.html">
                   Submit learner data:step-by-step
                 </a>
-              </li>					
+              </li>
+                 <li>
+                <a href="./useful_tools.html">
+                  Useful tools
+                </a>
+              </li>
             </ul>
           </nav>	
 			 <h2 class="govuk-heading-m" id="subsection-title">
