--- a/app/views/KitKat-9-4-0/useful_tools.html
+++ b/app/views/KitKat-9-4-0/useful_tools.html
@@ -14,27 +14,38 @@
   <h1 class="govuk-heading-xl">
     Useful tools
   </h1>
-        <ul class="govuk-list">
-  <li>
-    <a class="govuk-link" href="#">18/19 ILR Learner Entry Tool (V1)</a>
-  </li>
-  <li>
-    <a class="govuk-link" href="#">Funding information system (FIS)</a>
-  </li>
-  <li>
-    <a class="govuk-link" href="#">Learning aims</a>
-  </li>
-  <li>
-    <a class="govuk-link" href="#">Learner record service</a>
-  </li>
-</ul>
+ 
   
 
     </div>
-	  <div class="govuk-grid-column-one-third">
-        {% include "./includes/sidebar_help.html" %}
-      </div>
-
+      <div class="govuk-grid-column-one-thirds">
+   
+  </div>
 </div>
+      <div class="govuk-grid-row">
+  <div class="govuk-grid-column-one-third">
+      <h2 class="govuk-heading-s"><a class="govuk-link" href="#">18/19 ILR Learner Entry Tool (V1)</a></h2>
+    <p>The ILR Learner Entry Tool (LET) is an application which enables users to
+create 2018 to 2019 Individualised Learner Record (ILR) data in XML file
+format manually using a data entry interface.</p>
+  </div>
+  <div class="govuk-grid-column-one-third">
+      <h2 class="govuk-heading-s"><a class="govuk-link" href="#">Funding information system (FIS)</a></h2>
+      <p>FIS can be used by data providers to do the following:</p>
+<ul class="govuk-list govuk-list--bullet">
+    <li>validate Individualised Learner Record (ILR) data</li>
+    <li>calculate funding and derived variables</li>
+    <li>create a range of reports based on a set of ILR data.</li>
+      </ul>
+
+  </div>
+          <div class="govuk-grid-column-one-third">
+              <h2 class="govuk-heading-s"><a class="govuk-link" href="#">Learning aims</a></h2>
+    <p>Learning Aim Reference Service (LARS) offers a web based search facility. It allows users to search by most commonly used fields for Qualifications, Units, Apprenticeship Frameworks and Apprenticeship Standards and their associated validity and funding details.</p>
+  </div>
+</div>
+	 
+
+
 
 {% endblock %}
