--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,7 +33,7 @@
           <ul class="govuk-list govuk-list--bullet">
             <p>We added:</p>
             <li>email template</li>
-            <li>step by step concept (includes link to downloads and services)</li>
+            <li>step by step concept (includes link to downloads and services | Not MVP)</li>
             <li>reports only journey options</li>
             <li>communication banner</li>
             <li>new reports page</li>
@@ -42,7 +42,7 @@
             <li>exit survey</li>
             <li>updated sidebar</li>
             <li>downloads history</li>
-            <li>useful tools page</li>
+            <li>useful tools page | not MVP</li>
             <li>account info and sign out</li>
           </ul>
         </td>
