--- a/app/views/KitKat-9-4-0/previous-reports.html
+++ b/app/views/KitKat-9-4-0/previous-reports.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">		
 		<h1 class="govuk-heading-xl">Reports history</h1>
         <p>View your final reports from each period at the time of close.</p>
-        <h2 class="govuk-heading-m">Acedmeic year 2018/2019</h2>
+        <h2 class="govuk-heading-m">Acedemic year 2018/2019</h2>
        
         <table class="govuk-table">
   <caption class="govuk-table__caption govuk-visually-hidden">Return period and download</caption>
@@ -31,7 +31,7 @@
   </tbody>
 </table>
 				
-        <h2 class="govuk-heading-m">Acedmeic year 2017/2018</h2>
+        <h2 class="govuk-heading-m">Acedemic year 2017/2018</h2>
        
         <table class="govuk-table">
   <caption class="govuk-table__caption govuk-visually-hidden">Return period and download</caption>
