Removed useful links, updated pages

--- a/app/views/KitKat-9-4-0/contents.html
+++ b/app/views/KitKat-9-4-0/contents.html
@@ -18,7 +18,7 @@
         	Please do not enter any personal information. This prototype is not secure.
       	</p>
 
-		<h2 class="govuk-heading-l">ILR User Journey (Happy Path)</h2>
+		<h2 class="govuk-heading-l">ILR User Journey (Happy path)</h2>
 		
 		<ul class="govuk-list govuk-list--number">
 			<li><a href="start.html">Start page</a></li>
@@ -26,9 +26,19 @@
 		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
 			<li><a href="choose_file_to_upload.html">Choose file to upload</a></li>
 			<li><a href="your_files_uploading.html">Your file's uploading</a></li>
-			<li><a href="theres_a_problem.html">There's a problem</a></li>
-			<li><a href="no_problems_found.html">No problems found</a></li>
+			<li><a href="theres_a_problem.html">There's a problem</a></li>			
 			<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>
+			<li><a href="reports.html">Reports</a></li>
+            <li><a href="previous-reports.html">Previous reports</a></li>
+		</ul>
+        <h2 class="govuk-heading-l">ILR User Journey (Uber happy path)</h2>		
+		<ul class="govuk-list govuk-list--number">
+			<li><a href="start.html">Start page</a></li>
+		  	<li><a href="idams.html">IDAMS</a></li>
+		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
+			<li><a href="choose_file_to_upload.html">Choose file to upload</a></li>
+			<li><a href="your_files_uploading.html">Your file's uploading</a></li>		
+			<li><a href="ilr_data_submitted_clean.html">ILR data submitted (Clean file)</a></li>
 			<li><a href="reports.html">Reports</a></li>
             <li><a href="previous-reports.html">Previous reports</a></li>
 		</ul>
@@ -76,7 +86,7 @@
         <h2 class="govuk-heading-l">Emails</h2>
 		
 		<ul class="govuk-list govuk-list--bullet">	
-			<li><a href="./emails/ilr-email-for-provider.html">ILR email for provider</a></li>
+			<li><a href="./ilr-email-for-provider.html">ILR email for provider</a></li>
 			
 		</ul>
         <h2 class="govuk-heading-l">Guidance (Not in MVP)</h2>
