--- a/app/views/KitKat-9-4-0/esf_data_submitted.html
+++ b/app/views/KitKat-9-4-0/esf_data_submitted.html
@@ -38,7 +38,7 @@
       </summary>
       <div class="govuk-details__text">
         <p>If your email address is wrong, you will need to <a href="#">update it in your IdAMS account</a>.</p>
-        <p>If you haven't received an email, it may be in your junkmail folder. <a href="#">Check the R12 reports area</a> as your reports may still have been generated.</p>
+        <p>If you haven't received an email, it may be in your junkmail folder. <a href="./reports.html">Check the R02 reports area</a> as your reports may still have been generated.</p>
       </div>
     </details>
 
