--- a/app/views/KitKat-9-4-0/ilr-email-for-provider.html
+++ b/app/views/KitKat-9-4-0/ilr-email-for-provider.html
@@ -53,7 +53,7 @@
 
                                         <p>Reference: [#ILRReference]</p>
 
-                                        <p>We’ve received your ILR file and are currently processing it.</p>
+                                        <p>We&rsquo;ve received your ILR file and are currently processing it.</p>
 
                                         <p>We will email you again to let you know when your funding breakdown and related reports are ready to view.</p>
 
@@ -73,7 +73,7 @@
                         cellspacing="0" style="max-width:580px;width:100%;">
                             <tbody>
                                 <tr>
-                                    <td><img src="./hm_gov_logo.png" alt="Crown copyright" width="240px" height="29px"/> 
+                                    <td><img src="/public/images/hm_gov_logo.png" alt="Crown copyright" width="240px" height="29px"/> 
                                     </td>
                                 </tr>
                             </tbody>
