--- a/app/views/KitKat-9-4-0/ilr_data_submitted.html
+++ b/app/views/KitKat-9-4-0/ilr_data_submitted.html
@@ -12,10 +12,10 @@
     <div class="govuk-grid-column-two-thirds">
 		<div class="govuk-panel govuk-panel--confirmation">
           <h2 class="govuk-panel__title">
-            R12 ILR file submitted
+            R02 ILR file submitted
           </h2>
           <div class="govuk-panel__body">
-			  Reference: 123456789
+			  Reference: 23693
            
           </div>
         </div>		
@@ -35,7 +35,7 @@
       </summary>
       <div class="govuk-details__text">
         <p>If your email address is wrong, you will need to <a href="#">update it in your IdAMS account</a>.</p>
-        <p>If you haven't received an email, it may be in your junkmail folder. <a href="#">Check the R12 reports area</a> as your reports may still have been generated.</p>
+        <p>If you haven't received an email, it may be in your junkmail folder. <a href="./reports.html">Check the R02 reports area</a> as your reports may still have been generated.</p>
       </div>
     </details>
 
