--- a/app/views/KitKat-9-4-0/ilr_data_submitted_clean.html
+++ b/app/views/KitKat-9-4-0/ilr_data_submitted_clean.html
@@ -1,9 +1,6 @@
 
 {% extends "./layout.html" %}
 
-{% block beforeContent %}
-  {% include "./includes/back_choose_file_to_upload_ESFA.html" %}
-{% endblock %}
 
 {% block pageTitle %}
   Data Collections Transformation Prototype
@@ -15,25 +12,26 @@
     <div class="govuk-grid-column-two-thirds">
 		<div class="govuk-panel govuk-panel--confirmation">
           <h2 class="govuk-panel__title">
-            R02 Earnings adjustment statement file submitted
+            R02 ILR file submitted
           </h2>
           <div class="govuk-panel__body">
-			  Reference: 123456789
+			  Reference: 23693
            
           </div>
         </div>		
-<p>File: <span class="govuk-!-font-weight-bold">EAS-12345678-8976-20180806-151209.CSV</span></p>
+<p>File: <span class="govuk-!-font-weight-bold">ILR-12345678-1819-20180806-151209-02.XML</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Sam Smith</span></p>
-<p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p> 
+<p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p>
+        <p>We didn’t find any errors or warnings for the data in your file.</p>
 
 <h3 class="govuk-heading-m">What happens next?</h3>
 		<p>We’ve sent an email to sam.smith@college.ac.uk to confirm we’ve received your file.</p>
-		<p>We will email you again to let you know when your rule violation, funding and other reports are ready to view. This usually takes about 30 minutes.</p>
+		<p>We will email you again to let you know when your funding breakdown for R12 and related reports are ready to view. This usually takes about 30 minutes.</p>
 
     <details class="govuk-details">
       <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text">
-           Wrong email address or email not arrived
+          Wrong email address or email not arrived
         </span>
       </summary>
       <div class="govuk-details__text">
