--- a/app/views/KitKat-9-4-0/includes/sidebar_help_related_ESFA.html
+++ b/app/views/KitKat-9-4-0/includes/sidebar_help_related_ESFA.html
@@ -7,7 +7,7 @@
 	Monday to Thursday, 8:30am to 5:00pm<br/>
 	Friday, 8:30am to 4:00pm<br/>
 	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
-    <h2 class="govuk-heading-m" id="subsection-title">
+    <!--<h2 class="govuk-heading-m" id="subsection-title">
            Useful links
           </h2>
           <nav role="navigation" aria-labelledby="subsection-title">
@@ -28,7 +28,7 @@
                 </a>
               </li>
             </ul>
-          </nav>	
+          </nav>-->	
 			 <h2 class="govuk-heading-m" id="subsection-title">
            Related content
           </h2>
