--- a/app/views/KitKat-9-4-0/includes/sidebar_help.html
+++ b/app/views/KitKat-9-4-0/includes/sidebar_help.html
@@ -8,7 +8,7 @@
 	Friday, 8:30am to 4:00pm<br/>
 	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
 
-	<h2 class="govuk-heading-m" id="subsection-title">
+	<!--<h2 class="govuk-heading-m" id="subsection-title">
            Useful links
           </h2>
           <nav role="navigation" aria-labelledby="subsection-title">
@@ -29,6 +29,6 @@
                 </a>
               </li>
             </ul>
-          </nav>		
+          </nav>-->		
 			 
         </aside>
