--- a/app/views/KitKat-9-4-0/what_data_do_you_want_to_submit.html
+++ b/app/views/KitKat-9-4-0/what_data_do_you_want_to_submit.html
@@ -12,10 +12,10 @@
   <div class="govuk-grid-column-full">
     <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
   <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
-    R02 collection has been extended
+    The RO2 ILR deadline is 4 October
   </h2>
   <div class="govuk-highlight-summary__body">
-	  <p>Due to the outage experienced the submission window has been extended.</p>
+	  <p>Make sure you’ve uploaded and submitted your final file before 5pm.</p>
   </div>
 </div>
   </div>
@@ -30,33 +30,33 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-         What do you want to submit? 
+         What do you want to do? 
       </h1>
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-1" name="whattosubmit" type="radio" value="ilr">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-1">
-        ILR (Individualised Learner Records)
+        Upload ILR (Individualised Learner Records) data
       </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-2">
-        EAS (Earnings Adjustment Statement) 
+        Update EAS (Earnings Adjustment Statement)
       </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
-        ESF (European Social Fund) supplementary data
+        Upload ESF (European Social Fund) supplementary data
       </label>
       </div>
         <div class="govuk-radios__divider">or</div>
          <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="reports">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-4">
-        I want to download reports
+        Download reports
       </label>
       </div>
       </div>
