--- a/app/views/KitKat-9-4-0/previous-reports.html
+++ b/app/views/KitKat-9-4-0/previous-reports.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">		
 		<h1 class="govuk-heading-xl">Reports history</h1>
         <p>View your final reports from each period at the time of close.</p>
-        <h2 class="govuk-heading-m">Acedemic year 2018/2019</h2>
+        <h2 class="govuk-heading-m">Academic year 2018 to 2019</h2>
        
         <table class="govuk-table">
   <caption class="govuk-table__caption govuk-visually-hidden">Return period and download</caption>
@@ -26,12 +26,12 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R01</th>
-        <td class="govuk-table__cell "><a href="#">R01-123456.ZIP</a> (Zip, 1.3MB)</td>        
+        <td class="govuk-table__cell "><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
     </tr>    
   </tbody>
 </table>
 				
-        <h2 class="govuk-heading-m">Acedemic year 2017/2018</h2>
+        <h2 class="govuk-heading-m">Academic year 2017 to 2018</h2>
        
         <table class="govuk-table">
   <caption class="govuk-table__caption govuk-visually-hidden">Return period and download</caption>
@@ -45,19 +45,19 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R14</th>
-        <td class="govuk-table__cell "><a href="#">R14-123456.ZIP</a> (Zip, 1.3MB)</td>        
+        <td class="govuk-table__cell "><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R13</th>
-      <td class="govuk-table__cell "><a href="#">R13-123456.ZIP</a> (Zip, 1.2MB)</td>        
+      <td class="govuk-table__cell "><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.2MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R12</th>
-      <td class="govuk-table__cell "><a href="#">R12-123456.ZIP</a> (Zip, 1.8MB)</td>        
+      <td class="govuk-table__cell "><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.8MB)</td>        
     </tr>
        <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R11</th>
-      <td class="govuk-table__cell "><a href="#">R11-123456.ZIP</a> (Zip, 1.1MB)</td>        
+      <td class="govuk-table__cell "><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.1MB)</td>        
     </tr>
   </tbody>
 </table>
