--- a/app/views/KitKat-9-4-0/eas_data_submitted.html
+++ b/app/views/KitKat-9-4-0/eas_data_submitted.html
@@ -15,10 +15,10 @@
     <div class="govuk-grid-column-two-thirds">
 		<div class="govuk-panel govuk-panel--confirmation">
           <h2 class="govuk-panel__title">
-            R02 Earnings adjustment statement file submitted
+           EAS statement updated
           </h2>
           <div class="govuk-panel__body">
-			  Reference: 123456789
+			  Reference: 1234
            
           </div>
         </div>		
@@ -27,22 +27,7 @@
 <p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p> 
 
 <h3 class="govuk-heading-m">What happens next?</h3>
-		<p>We’ve sent an email to sam.smith@college.ac.uk to confirm we’ve received your file.</p>
-		<p>We will email you again to let you know when your rule violation, funding and other reports are ready to view. This usually takes about 30 minutes.</p>
-
-    <details class="govuk-details">
-      <summary class="govuk-details__summary">
-        <span class="govuk-details__summary-text">
-           Wrong email address or email not arrived
-        </span>
-      </summary>
-      <div class="govuk-details__text">
-        <p>If your email address is wrong, you will need to <a href="#">update it in your IdAMS account</a>.</p>
-        <p>If you haven't received an email, it may be in your junkmail folder. <a href="./reports.html">Check the R02 reports area</a> as your reports may still have been generated.</p>
-      </div>
-    </details>
-
-		<p><a href="./reports.html">View reports page</a></p>
+    <p><a href="./reports.html">View reports page</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
