--- a/app/views/KitKat-9-4-0/includes/back_what_data_do_you_want_to_submit.html
+++ b/app/views/KitKat-9-4-0/includes/back_what_data_do_you_want_to_submit.html
@@ -5,9 +5,9 @@
   html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
 }) }}
 <div class="account-info govuk-body">
-            <div>
+              <div>
                 <span class="your-name" id="bannerUserName">Sam Smith
-                UKPRN:123456</span> <a class="account-link" href="./reports" id="reports-link">Reports</a>
+                UKPRN:123456</span> <a class="account-link" href="./exit-survey" id="signout-link">Sign out</a>
             </div>
     
         </div>
