--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,19 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+      <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Kit Kat 9.4.1</th>
+        <td class="govuk-table__cell ">
+          <ul class="govuk-list govuk-list--bullet">
+           <p>We added:</p>
+            <li>multiple uploads for ESF</li>
+            <li>iterated uploading page</li>            
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="KitKat-9-4-1/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="KitKat-9-4-1/start.html">Start now</a></td>
+    </tr>
+      
        <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Kit Kat 9.4.0</th>
         <td class="govuk-table__cell ">
